[tool.poetry]
name = "git-test"
version = "0.1.0"
description = ""
authors = ["NickGoit <113237474+NickGoit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "git_test"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
